; ModuleID = '/home/carl/AnghaBench/RetroArch/input/common/extr_input_x11_common.c_x_input_poll_wheel.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/common/extr_input_x11_common.c_x_input_poll_wheel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@x11_mouse_wu = common dso_local global i32 0, align 4
@x11_mouse_wd = common dso_local global i32 0, align 4
@x11_mouse_hwd = common dso_local global i32 0, align 4
@x11_mouse_hwu = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @x_input_poll_wheel(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  switch i32 %7, label %12 [
    i32 4, label %8
    i32 5, label %9
    i32 6, label %10
    i32 7, label %11
  ]

8:                                                ; preds = %2
  store i32 1, i32* @x11_mouse_wu, align 4
  br label %12

9:                                                ; preds = %2
  store i32 1, i32* @x11_mouse_wd, align 4
  br label %12

10:                                               ; preds = %2
  store i32 1, i32* @x11_mouse_hwd, align 4
  br label %12

11:                                               ; preds = %2
  store i32 1, i32* @x11_mouse_hwu, align 4
  br label %12

12:                                               ; preds = %2, %11, %10, %9, %8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
